[gd_scene load_steps=6 format=3 uid="uid://wocmyj3b1w00"]

[ext_resource type="Script" uid="uid://clrw00gs4187u" path="res://scripts/level_select_menu.gd" id="1_m4235"]

[sub_resource type="Animation" id="Animation_ekxnf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l6cm7"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bqqt6"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bqqt6"]
_data = {
&"RESET": SubResource("Animation_ekxnf"),
&"fade_in": SubResource("Animation_l6cm7"),
&"fade_out": SubResource("Animation_bqqt6")
}

[node name="LevelSelectMenu" type="Control" node_paths=PackedStringArray("level_square_container", "animation_player")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4235")
level_square_container = NodePath("GridContainer")
animation_player = NodePath("AnimationPlayer")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -188.0
offset_right = 284.0
grow_vertical = 0
theme_override_constants/margin_left = 46
theme_override_constants/margin_top = 46
theme_override_constants/margin_right = 46
theme_override_constants/margin_bottom = 46

[node name="MainMenuButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(192, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 64
columns = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bqqt6")
}
autoplay = "fade_in"

[connection signal="pressed" from="MarginContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
